# rinse-descriptor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  demo.py  main.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_descriptor.py
python/: sitecustomize.py
python/rinse/: __init__.py  _crystal.py  _descriptor.py  _radial_basis.py  _structure_factors.py
python/rinse_descriptor/: __init__.py  _cctbx_import_patch.py  _cctbx_win_patch.py  _cli.py  _crystal.py  _descriptor.py  _hash.py  _pure_python.py  _structure_factors.py
python/rinse_descriptor/data/: pca_components.json
tests/: test_descriptor.py  test_hash.py
tests/fixtures/: QEHWEG01_P21.cif  QEHWEG02_P212121.cif  QEHWEG03_P21212.cif  QEHWEG04_Pmmn.cif  mpox.cif  nacl.cif  nacl.res  si.cif  ylid.cif
tools/: README.md  compute_cod_hashes.py  compute_csd_hashes.py  compute_pca.py  converge_csd_hashes.py  merge_chunks.py
